--- a/styles/custom-editor-style.css
+++ b/styles/custom-editor-style.css
@@ -461,6 +461,27 @@ body {
   font-size: 30px;
 }
 
+.alignright .wp-caption-dt,
+.alignright .wp-caption-dd,
+.alignleft .wp-caption-dt,
+.alignleft .wp-caption-dd,
+.aligncenter .wp-caption-dt,
+.aligncenter .wp-caption-dd,
+.alignnone .wp-caption-dt,
+.alignnone .wp-caption-dd,
+.size-auto .wp-caption-dt,
+.size-auto .wp-caption-dd,
+.size-full .wp-caption-dt,
+.size-full .wp-caption-dd,
+.size-large .wp-caption-dt,
+.size-large .wp-caption-dd,
+.size-medium .wp-caption-dt,
+.size-medium .wp-caption-dd,
+.size-thumbnail .wp-caption-dt,
+.size-thumbnail .wp-caption-dd {
+  line-height: 1.5;
+}
+
 @media all and (min-width: 1100px) {
   .editor-post-title textarea {
     font-size: 2.25em;
